--- a/estilo.css
+++ b/estilo.css
@@ -9,7 +9,26 @@
     color:white;
     padding: 20px;
   }
-  body{
-    background-color: red;
+
+  nav ul{
+      background-color: #757575;
+      width: 100%;
+      list-style-type: none;
+      text-align: center;
+  }
+  
+  nav li{
+      display: inline-flex;
+  }
+
+  nav a{
+      text-decoration: none;
+      color: white;
+      padding: 30px;
+      width: 150px;
+  }
+
+  nav li:hover {
+      background-color: #606060;
   }
   
