--- a/estilo.css
+++ b/estilo.css
@@ -24,8 +24,8 @@
   }
   nav ul{
       position: absolute;
-      top: 10px;
-      left: 250px;
+      top: 2%;
+      left: 20%;
       width: 100%;
       list-style-type: none;
   }
@@ -49,7 +49,7 @@
 div.redes_sociales{
     position: absolute;
     top: 20px;
-    left: 1250px;
+    left: 95%;
     width: 50px;
 }
 div.redes_sociales img:hover{
