--- a/estilo.css
+++ b/estilo.css
@@ -25,7 +25,7 @@
   nav ul{
       position: absolute;
       top: 2%;
-      left: 20%;
+      left: 30%;
       width: 100%;
       list-style-type: none;
   }
@@ -65,4 +65,20 @@ div.redes_sociales a{
 }
 div.redes_sociales img{
     width: 50px;
+}
+
+/* Media Queries */
+@media(max-width: 768px){
+nav ul{
+    width: 85%;
+    position: absolute;
+    top: 15%;
+    left: 14%;
+}
+
+div.redes_sociales{
+    position: absolute;
+    top: 1%;
+    left: 75%;
+}
 }
