--- a/estilo.css
+++ b/estilo.css
@@ -9,7 +9,12 @@
       --boton_background: ;
   }
   body{
-      background-color: var(--fondo);
+    background-color: #12238F;
+    background-color: #2C638F;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 1000'%3E%3Cg fill-opacity='0.83'%3E%3Ccircle fill='%232C638F' cx='50' cy='0' r='50'/%3E%3Cg fill='%232b608f' %3E%3Ccircle cx='0' cy='50' r='50'/%3E%3Ccircle cx='100' cy='50' r='50'/%3E%3C/g%3E%3Ccircle fill='%23295e8f' cx='50' cy='100' r='50'/%3E%3Cg fill='%23285b8f' %3E%3Ccircle cx='0' cy='150' r='50'/%3E%3Ccircle cx='100' cy='150' r='50'/%3E%3C/g%3E%3Ccircle fill='%23265890' cx='50' cy='200' r='50'/%3E%3Cg fill='%23255590' %3E%3Ccircle cx='0' cy='250' r='50'/%3E%3Ccircle cx='100' cy='250' r='50'/%3E%3C/g%3E%3Ccircle fill='%23245290' cx='50' cy='300' r='50'/%3E%3Cg fill='%23224f90' %3E%3Ccircle cx='0' cy='350' r='50'/%3E%3Ccircle cx='100' cy='350' r='50'/%3E%3C/g%3E%3Ccircle fill='%23214c90' cx='50' cy='400' r='50'/%3E%3Cg fill='%23204990' %3E%3Ccircle cx='0' cy='450' r='50'/%3E%3Ccircle cx='100' cy='450' r='50'/%3E%3C/g%3E%3Ccircle fill='%231e4590' cx='50' cy='500' r='50'/%3E%3Cg fill='%231d4290' %3E%3Ccircle cx='0' cy='550' r='50'/%3E%3Ccircle cx='100' cy='550' r='50'/%3E%3C/g%3E%3Ccircle fill='%231c3f90' cx='50' cy='600' r='50'/%3E%3Cg fill='%231a3c90' %3E%3Ccircle cx='0' cy='650' r='50'/%3E%3Ccircle cx='100' cy='650' r='50'/%3E%3C/g%3E%3Ccircle fill='%23193890' cx='50' cy='700' r='50'/%3E%3Cg fill='%23183590' %3E%3Ccircle cx='0' cy='750' r='50'/%3E%3Ccircle cx='100' cy='750' r='50'/%3E%3C/g%3E%3Ccircle fill='%23173190' cx='50' cy='800' r='50'/%3E%3Cg fill='%23152e8f' %3E%3Ccircle cx='0' cy='850' r='50'/%3E%3Ccircle cx='100' cy='850' r='50'/%3E%3C/g%3E%3Ccircle fill='%23142a8f' cx='50' cy='900' r='50'/%3E%3Cg fill='%2313278f' %3E%3Ccircle cx='0' cy='950' r='50'/%3E%3Ccircle cx='100' cy='950' r='50'/%3E%3C/g%3E%3Ccircle fill='%2312238F' cx='50' cy='1000' r='50'/%3E%3C/g%3E%3C/svg%3E");
+    background-attachment: fixed;
+    background-size: contain;
+    background-color: var(--fondo);
   }
   h1{
     font-size: 50px;
