--- a/estilo.css
+++ b/estilo.css
@@ -74,6 +74,11 @@ div.redes_sociales img{
 
 /* Media Queries */
 @media(max-width: 768px){
+header #branding,
+  header nav,
+  header nav li{
+    width:100%;
+}
 nav ul{
     width: 85%;
     position: absolute;
